# src

./: .gitignore
c/hw/: Makefile
clojure/: ad_hoc_hierarchy_dispatch.clj  agents.clj  atoms.clj  double_dispatch.clj  hash-maps.clj  intro.clj  multi_arity_functions.clj  multimethods.clj  prefer-method.clj  refs.clj
haskell/: binom.hs  caps.hs  caps2.hs  fix.hs  functor.hs  greet_alice_bob.hs  greeter.hs  guessn.hs  intro.hs  load.hs  monoid.hs  montecarlo.hs  montecarlo2.hs  multiplication_table.hs  parseip.hs  parsesyslog.hs  primes.hs  quux.txt  randoms.hs  reader.hs  rpn.hs  sorted.hs  state.hs  sum.hs  sum_or_factorial.hs  sumn.hs  sumn_3_5.hs  tree.hs  writer.hs
js/: asyncawait.js  cascade.js  class-without-class.js  closure.js  eventuality.js  lib.js  method_invocation_patterns.js  sealer.js  test.js
make/: Makefile
mathematica/: randomwalk.m  uppgift1.m  uppgift1.mx  uppgift2.m  uppgift2.mx  uppgift3.m  uppgift3.mx  uppgift4.mx
matlab/: add.m  bisect.m  bouncy_ball.m  comb.m  combM.m  do  do.m  extractDigits.m  f.m  fib.m  fib_m.m  fix_iter.m  flipa.m  fml.m  forever.m  iff.m  iter.m  l2u2.m  l2u3.m  l2u4.m  l2u5.m  l2u6.m  l3u64.m  lab4.m  lab5.m  lab6.m  memoize.m  min2.m  newton_rapson.m  palindrome.m  partial.m  partial2.m  piapprox.m  positive.m  randdist.m  randtest.m  reduce.m  reduce1.m  reverse.m  sinfunc.m  (+17 more)
r/: closures.r  intro.r
rust/small/: Cargo.toml  flake.nix
rust/small-but-normal/: Cargo.toml
rust/small-cdylib/: Cargo.toml
rust/small-cdylib/src/: lib.rs
rust/small/src/: main.rs
scheme/: glut.ss  intro.scm  intro.ss  test.ss
(+338 files in other folders)
