[package]
name = "small-but-normal"
version = "0.1.0"
authors = ["Daniel Beecham <daniel@lunix.se>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[profile.release]
opt-level = 'z'
lto = false
codegen-units = 1
panic = 'abort'
