[package]
name = "small"
version = "0.1.0"
authors = ["Daniel Beecham <daniel@lunix.se>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = { version = "0.2.94", default-features = false, std = false }
pin-utils = "0.1.0"

[profile.release]
opt-level = 's'
lto = false
codegen-units = 1
panic = 'abort'

[profile.dev]
panic = 'abort'
